--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,9 @@ ul {
 li {
   cursor: pointer;
   margin-bottom: 10px;
+  white-space: nowrap; /* Prevents wrapping */
+  overflow: hidden; /* Hides any content that overflows the container */
+  text-overflow: ellipsis; 
 }
 
 li:hover {
